--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
     "@vkruglikov/react-telegram-web-app": "^2.1.9",
+    "axios": "^1.6.5",
     "react": "^18.2.0",
     "react-animated-counter": "^1.7.6",
     "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
