--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "compilerOptions": {
-    "target": "es5",
     "lib": [
       "dom",
       "dom.iterable",
@@ -8,19 +7,23 @@
     ],
     "allowJs": true,
     "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
+    "strict": false,
     "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
+    "noEmit": true,
+    "incremental": true,
+    "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "preserve"
   },
   "include": [
-    "src"
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx"
+, "src/components/slot-game/index.js", "src/components/slot-game/Modal/ModalInfor/ModalRanking.tsx", "src/components/slot-game/Modal/ModalInfor/ModalHistory.jsx", "src/components/slot-game/Modal/ModalInfor/ModalGuide.jsx", "src/components/slot-game/Modal/ModalWin.jsx"  ],
+  "exclude": [
+    "node_modules"
   ]
 }
