--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "telegraf": "^4.15.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
