--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-animated-counter": "^1.7.6",
     "react-countdown-circle-timer": "^3.2.1",
+    "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.21.1",
